Change ui, add S3

--- a/call_center_s1/src/App.css
+++ b/call_center_s1/src/App.css
@@ -2,7 +2,13 @@
   
 }
 
-
+.leftPannel {
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+.rightPannel{
+  padding: 24px 0;
+  flex: 1;
+}
 
 
 
